# sokoban

./: sokoban.cabal  stack.yaml
app/: curses.hs  sdl.hs
data/levels/: 001.txt  12_Blocks.txt  GrigrChallenge_3.txt
sdl2-ttf/: .travis.yml  README.md  sdl2-ttf.cabal
sdl2-ttf/cbits/: helpers.c
sdl2-ttf/example/: Example.hs
sdl2-ttf/src/SDL/: Font.hs
sdl2-ttf/src/SDL/Raw/: Font.hsc
src/: Bindings.hs  Parser.hs  Sokoban.hs
