name:                sokoban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sokoban#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sokoban Parser Bindings
  build-depends:       base >= 4.7 && < 5
                     , sdl2
  default-language:    Haskell2010

executable sokoban-sdl
  hs-source-dirs:      app
  main-is:             sdl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sokoban
                     , sdl2
                     , linear
                     , sdl2-ttf
                     , sdl2-image
                     , reactive-banana
                     , reactive-banana-sdl2
                     , directory
                     , filepath
                     , text
  default-language:    Haskell2010

executable sokoban-curses
  hs-source-dirs:      app
  main-is:             curses.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sokoban
                     , hscurses
  default-language:    Haskell2010

test-suite sokoban-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sokoban
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sokoban
