name:          sdl2-ttf
version:       0.2
synopsis:      Bindings to SDL2_ttf.
description:   Haskell bindings to SDL2_ttf.
license:       MIT
license-file:  LICENSE
author:        Siniša Biđin <sinisa@bidin.eu>
maintainer:    Siniša Biđin <sinisa@bidin.eu>
copyright:     Copyright © 2015 Siniša Biđin
category:      Font, Foreign, Graphics
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/sbidin/sdl2-ttf.git

library
  ghc-options: -Wall

  exposed-modules:
    SDL.Font,
    SDL.Raw.Font

  other-modules:
    SDL.ExceptionHelper,
    SDL.Raw.Helper

  hs-source-dirs:
    src

  pkgconfig-depends:
    sdl2 >= 2.0.3,
    SDL2_ttf >= 2.0.0

  c-sources:
    cbits/helpers.c

  build-depends:
    base             >= 4.7 && < 5,
    bytestring       >= 0.10.4.0,
    linear           >= 1.10.1.2,
    sdl2             >= 2.0,
    template-haskell,
    text             >= 1.1.0.0,
    transformers     >= 0.2

  default-language:
    Haskell2010

flag example
  description: Build the example executable
  default:     True

executable sdl2-ttf-example
  ghc-options: -Wall
  hs-source-dirs: example
  main-is: Example.hs
  default-language: Haskell2010

  if flag(example)
    build-depends:
      base       >= 4.7 && < 5,
      bytestring >= 0.10.4.0,
      linear     >= 1.10.1.2,
      sdl2       >= 2.0,
      sdl2-ttf,
      text       >= 1.1.0.0
  else
    buildable: False
